2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/msvcrt/.cvsignore: Ignore *.gch.
	* lib/msvcrt/precomp.h: New file.
	* lib/msvcrt/Makefile (TARGET_PCH): Set to precomp.h.
	* lib/msvcrt/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/crtdll/.cvsignore: Ignore *.gch.
	* lib/crtdll/precomp.h: New file.
	* lib/crtdll/Makefile (TARGET_PCH): Set to precomp.h.
	* lib/crtdll/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/advapi32/.cvsignore: Ignore *.gch.
	* lib/advapi32/advapi32.h: New file.
	* lib/advapi32/Makefile (TARGET_PCH): Set to advapi32.h.
	* lib/advapi32/*/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* ntoskrnl/include/.cvsignore: New file.
	* ntoskrnl/include/ntoskrnl.h: Ditto.
	* ntoskrnl/*/*.c: Use pre-compiled header.
	* ntoskrnl/Makefile: Support pre-compiled header.
	* tools/helper.mk: .pch files are now .gch files.

2004-07-24  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile (DLLS): Add gdiplus.
	* apistatus.lst: Add gdiplus.dll.
	* baseaddress.cfg (TARGET_BASE_LIB_GDIPLUS): Declare.
	* bootdata/packages/reactos.dff: Add gdiplus.dll.
	* include/ntos/rtl.h (InsertTailList): Remove dependency on RtlAssert.
	* lib/gdiplus/(gdiplus, include, tests, tests/tests): New directories.
	* lib/gdiplus/(.cvsignore, gdiplus.def, gdiplus.edf, gdiplus.rc,
	makefile): New files.
	* lib/gdiplus/gdiplus/(.cvsignore, *.c): Ditto.
	* lib/gdiplus/include/(debug.h, GdiPlusPrivate.h): Ditto.
	* lib/gdiplus/tests/(.cvsignore, Makefile, passthrough.c): Ditto.
	* lib/gdiplus/tests/tests/(.cvsignore, test-1.c): Ditto.

2004-07-23  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* Makefile, drivers/video/makefile, lib/cpl/Makefile, ntoskrnl/Makefile,
	tools/helper.mk: Add test target.
	* include/ntos/types.h (UINT16, PUINT16): Declare.